// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an Icon control with icon 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="star"
  id=""
  imageFile=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Icon"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.i
    bottom=""
    className="ui-icon fa fa-fw fa-star test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="star"
    id=""
    imageFile=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Icon"
    padding=""
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "blue",
        "color": "red",
      }
    }
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  />
</Wrapper>
`;

exports[`Test creation of an Icon control with image 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile="./test-icon-image.png"
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Icon"
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <styled.img
    bottom=""
    className="ui-icon"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile="./test-icon-image.png"
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Icon"
    padding=""
    selected={false}
    sizing="normal"
    src="./test-icon-image.png"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  />
</Wrapper>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<Icon
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Icon"
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Icon"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={false}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.i
        bottom=""
        className="ui-icon fa fa-fw fa-bomb"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        iconName="bomb"
        id=""
        imageFile=""
        left=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        obj="Icon"
        padding=""
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        theme={null}
        tooltip=""
        top=""
        visible={false}
        width=""
        xcss={null}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bwzfXH cviwRQ"
          contentEditable={false}
          direction="right"
          disabled={false}
          height=""
          id=""
          selected={false}
          style={Object {}}
          width=""
        />
      </styled.i>
    </ThemeProvider>
  </Wrapper>
</Icon>
`;

exports[`Test retrieval of the Icon props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Icon",
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the Icon control 1`] = `
<Icon
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Icon"
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile=""
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Icon"
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.i
        bottom=""
        className="ui-icon fa fa-fw fa-bomb"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={true}
        err={null}
        errorMessage=""
        focus={false}
        height=""
        iconName="bomb"
        id=""
        imageFile=""
        left=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        obj="Icon"
        padding=""
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        theme={null}
        tooltip=""
        top=""
        visible={true}
        width=""
        xcss={null}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bwzfXH iYiZrA"
          contentEditable={false}
          direction="right"
          disabled={true}
          height=""
          id=""
          selected={false}
          style={Object {}}
          width=""
        />
      </styled.i>
    </ThemeProvider>
  </Wrapper>
</Icon>
`;
